--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@motionone/utils": "^10.17.0",
-    "@mui/material": "^5.15.12",
+    "@mui/icons-material": "^5.15.14",
+    "@mui/lab": "^5.0.0-alpha.169",
+    "@mui/material": "^5.15.14",
     "axios": "^1.6.7",
+    "boxicons": "^2.1.4",
     "framer-motion": "^11.0.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
